<resources>
    <string name="app_name">NMediaMaps</string>
    <string name="map_title">Map</string>
    <string name="objects_title">Objects</string>
    <string name="settings_title">Settings</string>
    <string name="title_label">Title</string>
    <string name="description_label">Description</string>
    <string name="save_button_text">Save</string>
    <string name="cancel_button_text">Cancel</string>
    <string name="last_touched_point_button_text">Add object</string>
    <string name="delete_button_text">Delete</string>
</resources>