<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    style="?attr/materialCardViewElevatedStyle"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="8dp"
    app:cardElevation="0dp"
    app:cardUseCompatPadding="true"
    app:contentPadding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
                    android:textStyle="bold"
                    android:layout_weight="1"
                    tools:text="Title" />

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/gotoLocationButton"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    app:srcCompat="@drawable/goto_location_icon"
                    android:tint="@android:color/holo_orange_dark"/>

            </LinearLayout>

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="1dp" />

            <androidx.core.widget.NestedScrollView
                android:id="@+id/nestedScrollDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/descriptionSmall"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="fill"
                        android:ellipsize="end"
                        android:maxLines="4"
                        android:minLines="2"
                        android:scrollbars="none"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                        tools:text="@tools:sample/lorem[150]" />

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/descriptionFullEdit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="fill"
                        android:backgroundTint="@android:color/transparent"
                        android:ellipsize="end"
                        android:minLines="2"
                        android:padding="0dp"
                        android:scrollbars="vertical"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                        tools:text="@tools:sample/lorem[150]" />
                </FrameLayout>

            </androidx.core.widget.NestedScrollView>

            <LinearLayout
                android:id="@+id/actionsLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:visibility="gone"
                tools:visibility="visible">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/save"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|start"
                    android:layout_marginStart="6dp"
                    android:layout_marginEnd="2dp"
                    android:layout_weight="1"
                    android:backgroundTint="@android:color/holo_green_dark"
                    android:text="@string/save_button_text" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|end"
                    android:layout_marginStart="6dp"
                    android:backgroundTint="@android:color/holo_blue_dark"

                    android:text="@string/cancel_button_text" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/delete"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|end"
                    android:layout_marginStart="2dp"
                    android:layout_marginEnd="10dp"
                    android:backgroundTint="@android:color/holo_red_dark"
                    android:text="@string/delete_button_text" />
            </LinearLayout>
        </LinearLayout>


        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/menu_button"
            android:layout_width="48dp"
            android:layout_height="match_parent"
            android:visibility="gone"
            app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.Material3.Button"
            app:srcCompat="@drawable/ic_menu_icon"
            app:tint="?attr/colorOnSurface" />

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>
